<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PantryPanacea</string>
    <string name="ingredients">Enter Ingredient</string>
    <string name="enter_ingredients_link">Enter Ingredients</string>
    <string name="search_recpie">Search for Recipe</string>
    <string name="view_ingreidents">View and Edit Ingreidents</string>
	<string name="previously_used_recpies">View Previously Used Recipes</string>
	<string name="select_all">Select All</string>
	<string name="deselect_all">Deselect All</string>
	<string name="action_settings">Action Settings</string>
	<string name="previously_used_title">Previously Used Recipes</string>
	<string name="catSpin">Select Category</string>
	<string name="ingSpin">Select Ingredient</string>
	<string name="unitSpin">Choose A Base Unit</string>
	<string name="submit">Submit</string>
</resources>
